--- a/02-class-id-selectors.html
+++ b/02-class-id-selectors.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles2.css">
     <title>Document</title>
 </head>
 <body>
 
-<p>Number 1 - I'm a class!</p>
+<div class="odd">Number 1 - I'm a class!</div>
 
-<p>Number 2 - I'm one ID</p>
+<div class="even" id="two">Number 2 - I'm one ID</div>
 
-<p>Number 3 - I'm a class, but cooler!</p>
+<div class="odd" id="three">Number 3 - I'm a class, but cooler!</div>
 
-<p>Number 4 - I'm another ID.</p>
+<div class="even" id="four">Number 4 - I'm another ID.</div>
 
-<p>Number 5 - I'm a class!</p>
+<div class="odd">Number 5 - I'm a class!</div>
     
 </body>
 </html>
