--- a/02-class-id-selectors.html
+++ b/02-class-id-selectors.html
@@ -11,11 +11,11 @@
 
 <div class="odd">Number 1 - I'm a class!</div>
 
-<div class="even" id="two">Number 2 - I'm one ID</div>
+<div id="two">Number 2 - I'm one ID</div>
 
-<div class="odd" id="three">Number 3 - I'm a class, but cooler!</div>
+<div class="odd cool">Number 3 - I'm a class, but cooler!</div>
 
-<div class="even" id="four">Number 4 - I'm another ID.</div>
+<div id="four">Number 4 - I'm another ID.</div>
 
 <div class="odd">Number 5 - I'm a class!</div>
     
